--- a/index.html
+++ b/index.html
@@ -296,8 +296,7 @@
                     </div>
 
                     <div class="about-image">
-                        <img src="https://images.unsplash.com/photo-1581092580497-e0d23cbdf1dc?q=80&w=2070&auto=format&fit=crop"
-                            alt="فريق San3y">
+                        <img src="assets/images/hero.webp" alt="فريق San3y">
                     </div>
                 </div>
             </div>
@@ -406,6 +405,7 @@
                 rating: 4.5,
                 reviews: 42,
                 location: "الرياض، حي المروج",
+                views: 20,
                 image: "https://images.unsplash.com/photo-1505373877841-8d25f7d46678?q=80&w=2128&auto=format&fit=crop"
             },
             {
@@ -416,6 +416,7 @@
                 rating: 5,
                 reviews: 63,
                 location: "جدة، حي الصفا",
+                views: 20,
                 image: "https://images.unsplash.com/photo-1581092580497-e0d23cbdf1dc?q=80&w=2070&auto=format&fit=crop"
             },
             {
@@ -426,6 +427,7 @@
                 rating: 4,
                 reviews: 37,
                 location: "الدمام، حي الراكة",
+                views: 20,
                 image: "https://images.unsplash.com/photo-1600607687939-ce8a6c25118c?q=80&w=2053&auto=format&fit=crop"
             },
             {
@@ -436,6 +438,7 @@
                 rating: 4.7,
                 reviews: 28,
                 location: "الرياض، حي النخيل",
+                views: 20,
                 image: "https://images.unsplash.com/photo-1586023492125-27b2c045efd7?q=80&w=1976&auto=format&fit=crop"
             },
             {
@@ -446,6 +449,7 @@
                 rating: 4.3,
                 reviews: 51,
                 location: "الدمام، حي الخليج",
+                views: 20,
                 image: "https://images.unsplash.com/photo-1584622650111-993a426fbf0a?q=80&w=2070&auto=format&fit=crop"
             },
             {
@@ -456,6 +460,7 @@
                 rating: 4.8,
                 reviews: 39,
                 location: "جدة، حي الروضة",
+                views: 20,
                 image: "https://images.unsplash.com/photo-1593104547480-9efb3c5f4a8b?q=80&w=1974&auto=format&fit=crop"
             }
         ];
@@ -497,6 +502,10 @@
                         <div class="professional-card__location">
                             <i class="fas fa-map-marker-alt"></i>
                             <span>${professional.location}</span>
+                        </div>
+                        <div class="professional-card__location">
+                            <i class="fas fa-eye"></i>
+                            <span>${professional.views}</span>
                         </div>
                         <a href="#" class="btn btn--primary" style="width: 100%; padding: 10px;">عرض الملف</a>
                     </div>
